# chomp-mirror

./: Cargo.toml  README.md
.github/workflows/: mirror.yml
autochomp/: Cargo.toml  build.rs
autochomp/benches/: parse.rs
autochomp/benches/parse/: main.rs
autochomp/benches/parse/data/: 12.nb  1548.nb  24.nb  48.nb  97.nb
autochomp/src/: lib.rs  main.rs  nibble.nb  nibble.rs
autochomp/tests/compare/: main.rs  nibble_exp.nb  ratata.nb  regex.nb  regex_fix.nb  sheep.nb
autonibble/: Cargo.toml
autonibble/benches/parse/: main.rs
autonibble/benches/parse/data/: 194.nb  3096.nb  387.nb  774.nb
autonibble/src/: main.rs
autonibble/tests/compare/: main.rs  nibble
chewed/: Cargo.toml
chewed/src/: error.rs  lib.rs  parse.rs  position.rs
chomp-bench/: Cargo.toml
chomp-bench/benches/: arith.rs  json.rs
chomp-bench/benches/arith/: main.rs
chomp-bench/benches/arith/data/: 1066.arith  134.arith  17850.arith  2180.arith  262.arith  35389.arith  4371.arith  556.arith  8380.arith
chomp-bench/benches/json/: main.rs
chomp-bench/benches/json/data/: 111.json  14181.json  1773.json  222.json  28362.json  3545.json  443.json  55.json  7091.json  886.json
chomp-bench/src/: lib.rs
chomp-bench/src/arith/: lalr.lalrpop  mod.rs  nibble.rs
chomp-bench/src/json/: lalr.lalrpop  mod.rs  nibble.rs
chomp-macro/: Cargo.toml
chomp-macro/benches/: json.rs
chomp-macro/benches/json/: main.rs
chomp-macro/src/: lib.rs
chomp-macro/tests/: nibble_exp.rs  ratata.rs  regex.rs  regex_fix.rs  sheep.rs
examples/autochomp/: main.rs
src/: lib.rs  main.rs
src/ast/: convert.rs  mod.rs  typed.rs
src/chomp/: '  ast.rs  check.rs  context.rs  error.rs  mod.rs  name.rs  set.rs  typed.rs  visit.rs
src/chomp/ast/: error.rs  mod.rs  substitute.rs
src/chomp/check/: check.rs  closed.rs  deepen.rs  infer.rs  inline.rs  mod.rs  shallow.rs  spanning.rs  substitute.rs
src/chomp/typed/: context.rs  error.rs  infer.rs  lower.rs  mod.rs
src/lower/: mod.rs  rust.rs
src/nibble/: convert.rs  cst.rs  mod.rs
src/nibble/parse/: iter.rs  mod.rs
tests/full/: main.rs
tests/full/nibble/: nibble_exp.nb  ratata.nb  regex.nb  regex_fix.nb  sheep.nb
