[package]
name = "chomp"
version = "0.1.0"
authors = ["Greg Brown <gmb60@cam.ac.uk>"]
edition = "2018"

[workspace]
members = ["autochomp", "chewed", "chomp-macro"]

[dependencies]
heck = "0.3"
paste = "1"
quote = "1"

[dependencies.proc-macro2]
version = "1"
features = ["span-locations"]

[dependencies.syn]
version = "1"
features = ["extra-traits"]
