[package]
name = "chomp"
version = "0.1.0"
authors = ["Greg Brown <gmb60@cam.ac.uk>"]
edition = "2018"

[workspace]
members = ["autochomp", "chewed", "chomp-macro"]

[dependencies]
heck = "0.3.2"
quote = "1.0.8"
syn = "1.0.58"

[dependencies.proc-macro2]
version = "1.0.24"
features = ["span-locations"]
