[package]
name = "autochomp"
version = "0.1.0"
authors = ["Greg Brown <gmb60@cam.ac.uk>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.3"
syn = "1.0.58"

[dependencies]
chewed = {path = "../chewed"}
chomp = {path = "../"}
chomp-macro = {path = "../chomp-macro"}

[[bench]]
name = "parse"
harness = false
