[package]
name = "chomp-macro"
version = "0.1.0"
authors = ["Greg Brown <gmb60@cam.ac.uk>"]
edition = "2018"

[dependencies]
chomp = {path = ".."}

[dependencies.syn]
version = "1.0.58"
features = ["parsing", "proc-macro"]

[dev-dependencies]
chewed = {path = "../chewed"}
criterion = "0.3.3"

[lib]
proc_macro = true

[[bench]]
name = "json"
harness = false
